feat(summary): 支持查询过滤零值资产
